--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # List of authors for copyright purposes, in no particular order
 
-Artiom Nechiporuk - architect.
+Artiom Nechiporuk - architect, lead developer.
 Andrey Vartenkov - senior developer.
 Andrey Lavrentiev - product manager.
