--- a/knp/autodoc/mainpage.dox
+++ b/knp/autodoc/mainpage.dox
@@ -1,31 +1,31 @@
 /**
-\mainpage About Kaspersky Neuromorphic Platform
+@mainpage About Kaspersky Neuromorphic Platform
 
-\tableofcontents
+@tableofcontents
 
 Kaspersky Neuromorphic Platform (also referred to as "the platform") is a software and hardware platform designed to emulate spiking neural networks and support them on various computers.
 You can use Kaspersky Neuromorphic Platform to do the following:
-\li Create and train neural networks based on the various types of input data, such as telemetry, events, images, 3D data, audio data and tactile data.
-\li Optimize the structure and hyperparameters of loaded neural networks.
-\li Conduct applied research in the field of input data classification and other application domains of spiking neural networks.
-\li Develop new topologies of neural networks, such as spike analogs of convolutional neural networks that imply convolution in space and time.
-\li Develop new models of synaptic plasticity.
-\li Implement new neuron models.
-\li Implement application solutions based on neuromorphic spiking neural networks and artificial intelligence in the field of robotic manipulators, Internet of Things, unmanned systems, human-machine interaction, wearable devices, and optimization planning.
-\li Implement application solutions on devices with low power consumption or using neural processing units (NPU).
+@li Create and train neural networks based on the various types of input data, such as telemetry, events, images, 3D data, audio data and tactile data.
+@li Optimize the structure and hyperparameters of loaded neural networks.
+@li Conduct applied research in the field of input data classification and other application domains of spiking neural networks.
+@li Develop new topologies of neural networks, such as spike analogs of convolutional neural networks that imply convolution in space and time.
+@li Develop new models of synaptic plasticity.
+@li Implement new neuron models.
+@li Implement application solutions based on neuromorphic spiking neural networks and artificial intelligence in the field of robotic manipulators, Internet of Things, unmanned systems, human-machine interaction, wearable devices, and optimization planning.
+@li Implement application solutions on devices with low power consumption or using neural processing units (NPU).
 You can use the C++ and Python languages to accomplish these tasks. The platform supports CPU. The Kaspersky Neuromorphic Platform framework can also be used as a backend for the PyNN API.
 
-\section doxygen About API Reference
+@section doxygen About API Reference
 
 The API reference for Kaspersky Neuromorphic Platform is intended for specialists engaged in the development of secure solutions based on the platform and in the development of the Kaspersky Neuromorphic Platform code base.
 
 For information on the platform concepts and architecture, installation instructions and platform use cases, see <a href="../../../user_guide/index.htm">Kaspersky Neuromorphic Platform Help</a>.
 
-\section thirdparty Information about Third-Party Code
+@section thirdparty Information about Third-Party Code
 
 Information about third-party code is contained in the file legal_notices.txt located in the application installation folder (in the 'legal' subfolder).
 
-\section trademark Trademark Notices
+@section trademark Trademark Notices
 
 Registered trademarks and service marks are the property of their respective owners.
 
@@ -34,4 +34,56 @@ Intel and Core are trademarks of Intel Corporation in the U.S. and/or other coun
 Linux is the registered trademark of Linus Torvalds in the U.S. and other countries.\n
 Python is a trademark or registered trademark of the Python Software Foundation.\n
 Debian is a registered trademark of Software in the Public Interest, Inc.
+
 */
+
+
+/**
+ * @dir /knp/backends/cpu/cpu-library/include/knp/backends/cpu-library
+ * @brief CPU library include directory.
+ */
+
+/**
+ * @dir /knp/backends/cpu/cpu-multi-threaded-backend/include/knp/backends/cpu-multi-threaded
+ * @brief KNP multi threaded backend include directory.
+ */
+
+/**
+ * @dir /knp/backends/cpu/cpu-single-threaded-backend/include/knp/backends/cpu-single-threaded
+ * @brief KNP single threaded backend include directory.
+ */
+
+/**
+ * @dir /knp/backends/cpu/thread_pool/include/knp/backends/thread_pool
+ * @brief Thread pool library include directory.
+ */
+
+/**
+ * @dir /knp/base-framework/include/knp/framework
+ * @brief KNP base framework include directory.
+ */
+
+/**
+ * @dir /knp/core-library/include/knp/core
+ * @brief KNP core library include directory.
+ */
+
+/**
+ * @dir /knp/devices-library/include/knp/devices
+ * @brief KNP devices library include directory.
+ */
+
+/**
+ * @dir /knp/meta-library/include/knp/meta
+ * @brief KNP meta library include directory.
+ */
+
+/**
+ * @dir /knp/neuron-traits-library/include/knp/neuron-traits
+ * @brief Neuron traits library headers.
+ */
+
+/**
+ * @dir /knp/synapse-traits-library/include/knp/synapse-traits
+ * @brief Synapse traits library headers.
+ */
