Motiv authors add

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,8 +1,14 @@
 # List of the Kaspersky team developers to support code
 
-Andrey Lavrentiev - product manager.
-Artiom Nechiporuk - architect, lead developer.
-Andrey Vartenkov - senior developer.
+- Andrey Lavrentiev - product manager.
+- Artiom Nechiporuk - architect, lead developer.
+- Andrey Vartenkov - senior developer.
 
 
 # List of authors for copyright purposes, in no particular order
+
+## Motiv NT
+
+- Alexey Liubiakin.
+- Alexey Nesin.
+- Andrey Mazko.
